[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gonullu"
version = "1.1.6"
description = "Pisi Linux gonullu paket derleme uygulamasi"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = [
    "requests",
    "docker>=5.0.0",
    "psutil",
    "colorama",
    "pyyaml"
]

[project.scripts]
gonullu = "gonullu.gonullu:main"

[project.urls]
Homepage = "https://github.com/PisiLinuxNew/gonullu"